--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src="./main.js" type="text/javascript"></script>
 
     <script>
-        var mapItems = [
+        var params = [];
+        params.mapItems = [
             {
                 'Title': 'Abas',
                 'DistributionProtocol': 'OGC:WMS',
@@ -20,8 +21,12 @@
             }
         ];
 
-        main.map(mapItems, document.getElementById("root"));
+        params.zoom = 3;
+        params.lat = 7184670.676487714;
+        params.lon = 526476.1128204655;
+        params.crs = 'EPSG:25833';
 
+        main.map(params, document.getElementById("root"));
     </script>
 </body>
 
