--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-    <div id="root"></div>
+    <!-- Openlayers needs a specified heigh and width itself or a specified outer heigh and width  !!! -->
+    <div id="root" style="height:800px; width:800px"></div>
     
     <script src="./main.js" type="text/javascript"></script>
 
@@ -16,8 +17,17 @@
             {
                 'Title': 'Abas',
                 'DistributionProtocol': 'OGC:WMS',
-                'GetCapabilitiesUrl': 'https://openwms.statkart.no/skwms1/wms.adm_enheter?request=GetCapabilities&service=WMS',
-                'addLayers': ['Administrative_enheter_2018']
+                'GetCapabilitiesUrl': 'https://openwms.statkart.no/skwms1/wms.adm_enheter2?request=GetCapabilities&service=WMS',
+                'addLayers': ['fylker_gjel','kommuner_gjel']
+            },
+            {
+                'Title': 'SFKB-Transakjsoner',
+                'DistributionProtocol': 'OGC:WMS',
+                'customParams': {
+                    TIME: '2019-01-01 00:00:00/2020-01-01 00:00:00'
+                },
+                'GetCapabilitiesUrl': 'https://wms.geonorge.no/skwms1/wms.sfkb-transaksjoner?request=GetCapabilities&service=WMS',
+                'addLayers': ['bygning']
             }
         ];
 
