--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
                 'addLayers': ['fylker_gjel','kommuner_gjel']
             },
             {
-                'Title': 'SFKB-Transakjsoner',
+                'Title': 'Abas',
                 'DistributionProtocol': 'OGC:WMS',
-                'customParams': {
-                    TIME: '2019-01-01 00:00:00/2020-01-01 00:00:00'
-                },
-                'GetCapabilitiesUrl': 'https://wms.geonorge.no/skwms1/wms.sfkb-transaksjoner?request=GetCapabilities&service=WMS',
-                'addLayers': ['bygning']
+                'GetCapabilitiesUrl': 'https://wms.geonorge.no/skwms1/wms.georef3?amp%3Brequest=GetCapabilities&amp%3Bversion=1.1.0&request=GetCapabilities&service=wms',
+                'addLayers': ['Georef-ABCD']
             }
+            //{
+            //    'Title': 'SFKB-Transakjsoner',
+            //    'DistributionProtocol': 'OGC:WMS',
+            //    'customParams': {
+            //        TIME: '2019-01-01 00:00:00/2020-01-01 00:00:00'
+            //    },
+            //    'GetCapabilitiesUrl': 'https://wms.geonorge.no/skwms1/wms.sfkb-transaksjoner?request=GetCapabilities&service=WMS',
+            //    'addLayers': ['bygning']
+            //}
         ];
 
         params.zoom = 3;
